# kpictina

./: CMakeLists.txt  Cargo.toml  README.md  build.rs  eu.rschwalk.kpictina.desktop
src/: CMakeLists.txt  MainWindow.qml  image_library.cpp  image_library.h  image_model.cpp  image_model.h  kpictina.qrc  main.cpp  main.rs
src/components/: CMakeLists.txt  ImageGrid.qml
src/qml/: Main_window.qml
